Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="skill-category">
                 <strong>Diğer</strong>
-                Tinkercad, XML (Layout)
+                Tinkercad
             </div>
         </div>
     </section>
@@ -134,7 +134,7 @@
     <section>
         <h2>Eğitim</h2>
         <div class="project-item">
-            <span class="project-title">[Lise/Okul Adın] | [Bölümün]</span>
+            <span class="project-title">Şehit Öğretmen Hüseyin Ağırman Mesleki ve Tekniki Anadolu Lisesi| Bilişim</span>
             <div class="project-desc">
                 <ul>
                     <li><strong>Web Tasarım ve Programlama:</strong> HTML/CSS yapıları ve arayüz tasarımı üzerine çalıştım.</li>
@@ -160,4 +160,5 @@
 </div>
 
 </body>
+
 </html>
